--- a/styles/home.css
+++ b/styles/home.css
@@ -71,8 +71,7 @@
 
 @media (max-width: 992px) {
   .navbarBrand {
-    color: #ffffff;
-    font-size: 17pt;
+    display: flex;
   }
   .nav-item {
     color: rgb(0, 0, 0);
